// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`E-stop resets power, speed, pressure and frequencies; reset only clears the trip: tripped state 1`] = `
Object {
  "cutterFaceFrequency": 0,
  "cutterPopupTimer": null,
  "cutterRotation": 0,
  "dialogType": "",
  "eStopReason": "Manual E-Stop Activated",
  "eStopTripped": true,
  "erectorPanel": true,
  "gShip": 0,
  "h2oMeter": true,
  "hbvStatus": false,
  "hmuStatus": false,
  "hpuEnabled": false,
  "jackingFramePosition": 0,
  "jackingFrameStatus": "stopped",
  "loadSensors": Array [
    Object {
      "id": 1,
      "position": "top",
      "status": "normal",
      "value": 0,
    },
    Object {
      "id": 2,
      "position": "left",
      "status": "normal",
      "value": 0,
    },
    Object {
      "id": 3,
      "position": "right",
      "status": "normal",
      "value": 0,
    },
  ],
  "modbusStatus": Object {
    "connected": false,
    "lastError": null,
  },
  "movStatus": false,
  "oilPressure": 0,
  "oilTempStatus": "normal",
  "oilTemperature": 65,
  "powerOn": false,
  "pressure": 0,
  "rpm": 0,
  "rs485Connected": true,
  "scewConveyor": true,
  "sensorData": Object {
    "actuatorA": Object {
      "status": "normal",
      "unit": "mm",
      "value": 0,
    },
    "actuatorB": Object {
      "status": "normal",
      "unit": "mm",
      "value": 0,
    },
    "actuatorC": Object {
      "status": "normal",
      "unit": "mm",
      "value": 0,
    },
    "earthPressure": Object {
      "status": "normal",
      "unit": "bar",
      "value": 0,
    },
    "flame": Object {
      "status": "normal",
      "unit": "%",
      "value": 0,
    },
    "motorTemperature": Object {
      "status": "normal",
      "unit": "°C",
      "value": 0,
    },
  },
  "showCutterFrequencyHover": false,
  "showFrequencyDialog": false,
  "showPowerDialog": false,
  "showWaterPumpFrequencyHover": false,
  "slurryPump": true,
  "steeringAngle": 0,
  "tbmStateMessage": Object {
    "message": "",
    "type": "info",
  },
  "tempFrequency": 0,
  "vfdCutterHead": true,
  "vfdMotor": true,
  "waterPumpFrequency": 0,
  "waterPumpPopupTimer": null,
}
`;

exports[`preserves every public context key and initial state: initial state 1`] = `
Object {
  "cutterFaceFrequency": 0,
  "cutterPopupTimer": null,
  "cutterRotation": 0,
  "dialogType": "",
  "eStopReason": "",
  "eStopTripped": false,
  "erectorPanel": true,
  "gShip": 0,
  "h2oMeter": true,
  "hbvStatus": false,
  "hmuStatus": false,
  "hpuEnabled": false,
  "jackingFramePosition": 0,
  "jackingFrameStatus": "stopped",
  "loadSensors": Array [
    Object {
      "id": 1,
      "position": "top",
      "status": "normal",
      "value": 0,
    },
    Object {
      "id": 2,
      "position": "left",
      "status": "normal",
      "value": 0,
    },
    Object {
      "id": 3,
      "position": "right",
      "status": "normal",
      "value": 0,
    },
  ],
  "modbusStatus": Object {
    "connected": false,
    "lastError": null,
  },
  "movStatus": false,
  "oilPressure": 0,
  "oilTempStatus": "normal",
  "oilTemperature": 65,
  "powerOn": false,
  "pressure": 0,
  "rpm": 0,
  "rs485Connected": true,
  "scewConveyor": true,
  "sensorData": Object {
    "actuatorA": Object {
      "status": "normal",
      "unit": "mm",
      "value": 0,
    },
    "actuatorB": Object {
      "status": "normal",
      "unit": "mm",
      "value": 0,
    },
    "actuatorC": Object {
      "status": "normal",
      "unit": "mm",
      "value": 0,
    },
    "earthPressure": Object {
      "status": "normal",
      "unit": "bar",
      "value": 0,
    },
    "flame": Object {
      "status": "normal",
      "unit": "%",
      "value": 0,
    },
    "motorTemperature": Object {
      "status": "normal",
      "unit": "°C",
      "value": 0,
    },
  },
  "showCutterFrequencyHover": false,
  "showFrequencyDialog": false,
  "showPowerDialog": false,
  "showWaterPumpFrequencyHover": false,
  "slurryPump": true,
  "steeringAngle": 0,
  "tbmStateMessage": Object {
    "message": "",
    "type": "info",
  },
  "tempFrequency": 0,
  "vfdCutterHead": true,
  "vfdMotor": true,
  "waterPumpFrequency": 0,
  "waterPumpPopupTimer": null,
}
`;

exports[`preserves every public context key and initial state: public contract 1`] = `
Array [
  "confirmFrequencyChange",
  "confirmPowerChange",
  "cutterFaceFrequency",
  "cutterPopupTimer",
  "cutterRotation",
  "dialogType",
  "eStopReason",
  "eStopTripped",
  "erectorPanel",
  "extendJackingFrame",
  "gShip",
  "getColorForStatus",
  "getStatusFromValue",
  "h2oMeter",
  "handleCutterPopupHide",
  "handleCutterPopupShow",
  "handleFrequencyToggle",
  "handlePowerToggle",
  "handleWaterPumpPopupHide",
  "handleWaterPumpPopupShow",
  "hbvStatus",
  "hmuStatus",
  "hpuEnabled",
  "jackingFramePosition",
  "jackingFrameStatus",
  "loadSensors",
  "modbusStatus",
  "movStatus",
  "oilPressure",
  "oilTempStatus",
  "oilTemperature",
  "powerOn",
  "pressure",
  "readModbusRegister",
  "resetEStop",
  "retractJackingFrame",
  "rpm",
  "rs485Connected",
  "scewConveyor",
  "sensorData",
  "setCutterFaceFrequency",
  "setCutterPopupTimer",
  "setCutterRotation",
  "setDialogType",
  "setEStopReason",
  "setEStopTripped",
  "setErectorPanel",
  "setGShip",
  "setH2oMeter",
  "setHbvStatus",
  "setHmuStatus",
  "setHpuEnabled",
  "setJackingFramePosition",
  "setJackingFrameStatus",
  "setLoadSensors",
  "setMovStatus",
  "setOilPressure",
  "setOilTempStatus",
  "setOilTemperature",
  "setPowerOn",
  "setPressure",
  "setRpm",
  "setRs485Connected",
  "setScewConveyor",
  "setSensorData",
  "setShowCutterFrequencyHover",
  "setShowFrequencyDialog",
  "setShowPowerDialog",
  "setShowWaterPumpFrequencyHover",
  "setSlurryPump",
  "setSteeringAngle",
  "setTbmStateMessage",
  "setTempFrequency",
  "setVfdCutterHead",
  "setVfdMotor",
  "setWaterPumpFrequency",
  "setWaterPumpPopupTimer",
  "showCutterFrequencyHover",
  "showFrequencyDialog",
  "showPowerDialog",
  "showWaterPumpFrequencyHover",
  "slurryPump",
  "steeringAngle",
  "stopJackingFrame",
  "tbmStateMessage",
  "tempFrequency",
  "togglePower",
  "triggerEStop",
  "turnOffSystem",
  "updateFrequencyOnHover",
  "vfdCutterHead",
  "vfdMotor",
  "waterPumpFrequency",
  "waterPumpPopupTimer",
  "writeModbusRegister",
]
`;

exports[`simulations retain their timing and deterministic values: after two seconds 1`] = `
Object {
  "cutterFaceFrequency": 0,
  "cutterPopupTimer": null,
  "cutterRotation": 250,
  "dialogType": "",
  "eStopReason": "",
  "eStopTripped": false,
  "erectorPanel": true,
  "gShip": 0,
  "h2oMeter": true,
  "hbvStatus": false,
  "hmuStatus": false,
  "hpuEnabled": true,
  "jackingFramePosition": 0,
  "jackingFrameStatus": "stopped",
  "loadSensors": Array [
    Object {
      "id": 1,
      "position": "top",
      "status": "normal",
      "value": 60,
    },
    Object {
      "id": 2,
      "position": "left",
      "status": "normal",
      "value": 60,
    },
    Object {
      "id": 3,
      "position": "right",
      "status": "normal",
      "value": 60,
    },
  ],
  "modbusStatus": Object {
    "connected": false,
    "lastError": null,
  },
  "movStatus": true,
  "oilPressure": 1740,
  "oilTempStatus": "normal",
  "oilTemperature": 65,
  "powerOn": true,
  "pressure": 0,
  "rpm": 120,
  "rs485Connected": true,
  "scewConveyor": true,
  "sensorData": Object {
    "actuatorA": Object {
      "status": "normal",
      "unit": "mm",
      "value": 0,
    },
    "actuatorB": Object {
      "status": "normal",
      "unit": "mm",
      "value": 0,
    },
    "actuatorC": Object {
      "status": "normal",
      "unit": "mm",
      "value": 0,
    },
    "earthPressure": Object {
      "status": "normal",
      "unit": "bar",
      "value": 0,
    },
    "flame": Object {
      "status": "normal",
      "unit": "%",
      "value": 1,
    },
    "motorTemperature": Object {
      "status": "normal",
      "unit": "°C",
      "value": 20,
    },
  },
  "showCutterFrequencyHover": false,
  "showFrequencyDialog": false,
  "showPowerDialog": false,
  "showWaterPumpFrequencyHover": false,
  "slurryPump": true,
  "steeringAngle": 0,
  "tbmStateMessage": Object {
    "message": "",
    "type": "info",
  },
  "tempFrequency": 0,
  "vfdCutterHead": true,
  "vfdMotor": true,
  "waterPumpFrequency": 0,
  "waterPumpPopupTimer": null,
}
`;
